fixed spacing on about project section

--- a/befa2b19820da7401dbf672069d4af99a040c200/css/projects.css
+++ b/befa2b19820da7401dbf672069d4af99a040c200/css/projects.css
@@ -19,7 +19,8 @@
     position: relative;
     display: flex;
     justify-content: center;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: white;
 }
 
